<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::table('admin', function (Blueprint $table) {
            $table->string('avatar')->nullable()->after('password');
        });
        
        Schema::table('guru', function (Blueprint $table) {
            $table->string('avatar')->nullable()->after('password');
        });
        
        Schema::table('siswa', function (Blueprint $table) {
            $table->string('avatar')->nullable()->after('password');
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::table('admin', function (Blueprint $table) {
            $table->dropColumn('avatar');
        });
        
        Schema::table('guru', function (Blueprint $table) {
            $table->dropColumn('avatar');
        });
        
        Schema::table('siswa', function (Blueprint $table) {
            $table->dropColumn('avatar');
        });
    }
};
